# vfwidgets

./: .envrc  .gitignore  CLAUDE.md  DemoTheme.json  Makefile  README.md  move-tab-between-windows-PLAN.md  pane-maximize-toggle-IMPLEMENTATION.md  pyproject.toml  requirements-dev.txt  setup.sh  test_clean.py  test_ruff.py  writing-dev-AGENTS-v2.md  writing-dev-AGENTS.md
apps/reamde/: BUGFIX-single-instance.md  DEMO1.md  DEMO2.md  Makefile  README.md  TESTING.md  build.sh  fix-spec.sh  install-user.sh  pyproject.toml  pysidedeploy.spec  reamde.desktop  reamde_main.py  run_reamde.py  test_reamde.sh  test_single_instance.sh  test_viewer_standalone.py  uninstall-user.sh  white-flash-simplification-BUGFIX.md
apps/theme-studio/: .gitignore  ARCHITECTURE-ISSUE.md  BUGFIX-preview-update.md  DEBUG-TERMINAL-FONTS.md  DEMO.md  KNOWN-ISSUES.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  README.md  RELEASE-NOTES-MVP.md  SESSION-SUMMARY.md  STATUS.md  TERMINAL-FONT-FIX-COMPLETE.md  TESTING-FONT-CHANGES.md  TESTING-TERMINAL-FONTS.md  pyproject.toml  test_color_icon_fix.py  test_default_values.md  test_generic_plugin.py  test_manual_workflow.py  test_plugin_integration.py  test_preview_canvas.py  test_preview_update_fix.py  test_search_filter.py  test_search_simple.py  test_token_browser_ui.py  test_token_tree_model.py  visual_test_colors.py
apps/theme-studio/docs/: GUI-LAYOUT-SPECIFICATION.md  SPECIFICATION.md  USER-GUIDE-MVP.md  font-editing-integration-PLAN.md
apps/theme-studio/examples/: phase1_demo.py
apps/theme-studio/tests/: test_e2e_integration.py  test_metadata_editing.py  test_phase2_editing.py  test_plugin_system.py
apps/theme-studio/wip/: phase1-tasks-IMPLEMENTATION.md
apps/viloweb/: Makefile  README.md  pyproject.toml
apps/viloweb/docs/: ARCHITECTURE-v0.2.md  ARCHITECTURE.md  README.md  SPECIFICATION.md  UI-MOCKUPS.md
apps/viloweb/examples/: 01_basic_browser.py  02_custom_start_page.py  03_bookmark_management.py  04_local_demo.py
apps/viloweb/tests/: conftest.py  test_bookmark_manager.py  test_browser_tab.py  test_viloweb_bridge.py
apps/viloweb/wip/: browser-PLAN.md
apps/viloxterm/: HOW-TO-TEST-PREFERENCES.md  Makefile  PREFERENCES-FINAL-STATUS.md  PREFERENCES-IMPLEMENTATION-PROGRESS.md  PREFERENCES-READY-TO-TEST.md  PREFERENCES-SUMMARY.md  QUICK-START-PREFERENCES.md  README.md  TESTING-TERMINAL-FONTS-GUI.md  build.ps1  build.sh  fix-spec.sh  install-system.sh  install-user.sh  pyproject.toml  pysidedeploy.spec  test_preferences_dialog.py  test_simple.py  uninstall-system.sh  uninstall-user.sh  viloxterm.desktop  viloxterm_main.py
apps/viloxterm/docs/: ARCHITECTURE.md  README.md  building-binary-GUIDE.md  focus-handling-GUIDE.md  keybinding-manager-integration-GUIDE.md  keyboard-shortcuts-SPEC.md  lessons-learned-GUIDE.md  multisplit-migration-COMPLETE.md  terminal-customization-IMPLEMENTATION.md  terminal-customization-PLAN.md  theme-integration-IMPLEMENTATION.md  windows-transparency-flash-BUGFIX.md
apps/viloxterm/icons/: generate-pngs.sh
apps/viloxterm/themes/: default-dark.json
shared/vfwidgets_common/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
shared/vfwidgets_common/docs/: frameless-window-GUIDE.md
shared/vfwidgets_common/tests/: test_frameless.py  test_single_instance.py  test_single_instance_theme.py
shared/vfwidgets_common/wip/: unified-desktop-integration-DESIGN.md
widgets/chrome-tabbed-window/: AUDIT_REPORT.md  CHANGELOG.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  test_drop_in_replacement.py  test_phase2_features.py  test_theme_debug.py
widgets/chrome-tabbed-window/docs/: api.md  architecture.md  chrome-tabbed-window-SPECIFICATION.md  chrome-tabs-implementation-GUIDE.md  extension-guide.md  known-issues-BUGFIX.md  platform-notes.md  theme-integration-GUIDE.md  usage.md
widgets/chrome-tabbed-window/examples/: 01_basic_usage.py  02_frameless_chrome.py  03_tab_compression_demo.py  04_themed_chrome_tabs.py  05_themed_chrome_embedded.py  06_editable_tabs.py  README.md  debug_dragging.py  debug_output.txt  test_all_fixes.py  test_buttons.py  test_dragging.py  test_dragging_fixed.py  test_final_dragging.py  test_functionality.py  test_qt_dragging.py  test_window_interaction.py
widgets/chrome-tabbed-window/tests/: test_theme_integration.py  test_themed_chrome_window.py
widgets/chrome-tabbed-window/wip/: README.md  agent-usage.md  api-parity-checklist.md  daily-progress.md  decision-log.md  implementation-checklist.md  phase1-completion-summary.md  phase1-foundation-tasks.md  (+8 more)
widgets/keybinding_manager/: CHANGELOG.md  README.md  pyproject.toml
widgets/markdown_widget/: README.md  START-HERE.md  pyproject.toml  requirements.txt  test_fixes.md  test_theme_integration.py
widgets/multisplit_widget/: DEBUGGING.md  MVP-COMPLETE.md  README.md  demo_buttons.py  demo_mvp.py  demo_mvp_enhanced.py  focus-management-DESIGN.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_focus_buttons.py  verify_phase0.py
widgets/terminal_widget/: .coveragerc  IMPLEMENTATION_COMPLETE.md  LICENSE  MULTI_SESSION_IMPLEMENTATION.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_test.sh  run_tests.sh  terminal-event-system-GUIDE.md  test_terminal.py  test_theme_switch.py
widgets/theme_system/: API-SIMPLIFICATION-SUMMARY.md  BREAKING-CHANGES.md  CHANGELOG.md  LICENSE  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE-v2.0.0-OVERLAY-SYSTEM.md  SURGICAL-ENHANCEMENT-COMPLETE.md  TASK-14-SUMMARY.md  baseline-surgical.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_combo_debug.py  test_examples.py  test_theme_editor_launch.py  test_theming.py  testing-protocol-GUIDE.md  verify_complete_tree.py  verify_font_tokens.py  verify_font_tokens_ui.py
widgets/vilocode_window/: CHANGELOG.md  README.md  output.txt  pyproject.toml
widgets/webview_widget/: README.md  pyproject.toml  test_layout.py
widgets/workspace_widget/: .workspace.json  DESIGN.md  GAP-ANALYSIS.md  LICENSE  README.md  SPECIFICATION.md  pyproject.toml  requirements.txt
(+1007 files in other folders)
