[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reamde"
version = "0.1.0"
description = "Single-instance markdown document viewer with tabbed interface"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "VFWidgets Team", email = "vfwidgets@example.com"}
]
dependencies = [
    "PySide6>=6.9.0",
    "vfwidgets-common>=0.1.0",
    "vfwidgets-vilocode-window>=0.1.0",
    "chrome-tabbed-window>=0.1.0",
    "vfwidgets-markdown>=2.0.0",
    "vfwidgets-theme-system>=2.0.0rc4",
]
keywords = ["markdown", "viewer", "document", "pyside6", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Editors",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
reamde = "reamde.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "N802",  # function name should be lowercase (Qt overrides require camelCase)
]
