[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vftheme-studio"
version = "0.1.0-dev"
description = "Visual theme designer for VFWidgets applications"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vilosource", email = "vilosource@viloforge.com"}
]
keywords = ["theme", "design", "qt", "pyside6", "visual-editor", "vfwidgets"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.9.0",
    # Note: During development, install these from local paths:
    # pip install -e ../../widgets/theme_system
    # pip install -e ../../widgets/vilocode_window
    # pip install -e ../../widgets/keybinding_manager
    # When released, uncomment:
    # "vfwidgets-theme-system>=2.0.0",
    # "vfwidgets-vilocode-window",
    # "vfwidgets-keybinding>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Optional preview plugins (auto-detected if installed)
terminal = [
    "vfwidgets-terminal",
]
multisplit = [
    "vfwidgets-multisplit",
]
chrome-tabs = [
    "chrome-tabbed-window",
]
all-plugins = [
    "vfwidgets-terminal",
    "vfwidgets-multisplit",
    "chrome-tabbed-window",
]

[project.scripts]
vftheme-studio = "theme_studio.__main__:main"
theme-studio = "theme_studio.__main__:main"

[project.urls]
Homepage = "https://github.com/viloforge/vfwidgets"
Documentation = "https://github.com/viloforge/vfwidgets/tree/main/apps/theme-studio/docs"
Repository = "https://github.com/viloforge/vfwidgets"
Issues = "https://github.com/viloforge/vfwidgets/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
theme_studio = [
    "resources/**/*",
    "resources/templates/*.json",
    "resources/icons/*.png",
    "resources/icons/*.svg",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs during development
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI (use pytest-qt)",
]
