[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viloweb"
version = "0.2.0"
description = "Educational web browser with Chrome-style frameless window - demonstrates modern browser architecture, tabs, bookmarks, and Qt WebEngine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vilosource", email = "vilosource@viloforge.com"}
]

dependencies = [
    "PySide6>=6.9.0",
    "vfwidgets-webview>=0.2.0",
    "chrome-tabbed-window>=0.1.0",
    "vfwidgets-theme-system",
    "vfwidgets-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.250",
    "mypy>=0.990",
]

[project.scripts]
viloweb = "viloweb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
