[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfwidgets-markdown"
version = "0.1.0"
description = "PySide6 markdown widget collection (viewer, editor, and related widgets)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "VFWidgets Team", email = "vfwidgets@example.com"}
]
dependencies = [
    "PySide6>=6.9.0",
]
keywords = ["pyside6", "qt", "widget", "gui", "markdown", "viewer", "editor", "mermaid", "katex", "syntax-highlighting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
theme = [
    "vfwidgets-theme-system",  # Optional theme integration
]
keybinding = [
    "vfwidgets-keybinding",  # Optional keyboard shortcuts
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vfwidgets_markdown = [
    "py.typed",
    "resources/**/*",
]

[tool.pyside6-project]
files = [
    "src/vfwidgets_markdown/*.py",
]
