[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfwidgets-multisplit"
version = "1.0.0"
description = "PySide6 multisplit widget for VFWidgets collection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "VFWidgets Team", email = "vfwidgets@example.com"}
]
dependencies = [
    "PySide6>=6.9.0",
    "vfwidgets-theme-system @ file:///home/kuja/GitHub/vfwidgets/widgets/theme_system",
]
keywords = ["pyside6", "qt", "widget", "gui", "multisplit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vfwidgets_multisplit = [
    "py.typed",
    "resources/icons/*",
    "resources/styles/*",
]

[tool.pyside6-project]
files = [
    "src/vfwidgets_multisplit/*.py",
]
