[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfwidgets-terminal"
version = "1.0.0"
description = "PySide6 terminal widget for VFWidgets collection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vilosource", email = "vilosource@viloforge.com"}
]
dependencies = [
    "PySide6>=6.9.0",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
    "python-engineio>=4.0.0",
    "simple-websocket>=1.0.0",
]
keywords = ["pyside6", "qt", "widget", "gui", "terminal", "xterm", "console"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PySide6>=6.0",
]
full = [
    "psutil>=5.0",  # For process monitoring
    "pygments>=2.0",  # For syntax highlighting
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vfwidgets_terminal = [
    "py.typed",
    "resources/*.html",
    "resources/*.css",
    "resources/*.js",
    "resources/icons/*",
    "resources/styles/*",
]

[tool.pyside6-project]
files = [
    "src/vfwidgets_terminal/*.py",
]

[tool.ruff.lint]
[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"test_*.py" = ["E402"]
